2007-09-25  Sebastian Dröge  <slomo@circular-chaos.org>

	* common/gmountspec.c: (g_mount_spec_to_dbus_with_path):
	* common/gvfsdaemonprotocol.c: (_g_dbus_append_file_attribute),
	(_g_dbus_append_file_info), (_g_dbus_append_attribute_info_list):
	* daemon/mount.c: (vfs_mount_to_dbus):
	Don't pass the contained signature when creating a DBus struct. Since
	DBus 1.1.0 this will lead to an assertion. The signature will filled
	automatically while adding values to the struct.

2007-09-17  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfile.c:
        * client/gdaemonfileinputstream.c:
        * client/gdaemonfileoutputstream.c:
        * client/gvfsfusedaemon.c:
        * common/gvfsdaemonprotocol.h:
        * daemon/Makefile.am:
        * daemon/gvfsbackend.[ch]:
        * daemon/gvfsbackendftp.c:
        * daemon/gvfsbackendsftp.c:
        * daemon/gvfsbackendsmb.c:
        * daemon/gvfsbackendsmbbrowse.c:
        * daemon/gvfsbackendtest.c:
        * daemon/gvfsjobenumerate.h:
        * daemon/gvfsjobgetfsinfo.[ch]: Removed.
        * daemon/gvfsjobgetinfo.[ch]: Removed.
        * daemon/gvfsjobqueryfsinfo.[ch]: Added.
        * daemon/gvfsjobqueryinfo.[ch]: Added.
        * daemon/gvfsjobsetattribute.[ch]:
        * test/benchmark-gvfs-big-files.c:
        * test/benchmark-gvfs-small-files.c:
	Update with the get_info -> query_info rename in gio

2007-09-17  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendsftp.c:
	Update to new GDataInputStream function names 

2007-09-14  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfileoutputstream.c:
        (g_daemon_file_output_stream_get_etag):
	Update to new get_etag API.

2007-09-14  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendsftp.c:
	Add etag support for close on write

I stopped tracked changes here. Look at "git log" instead.
		
2006-09-28  Alexander Larsson  <alexl@redhat.com>

	* gfilesimple.[ch]:
	Move GFileSimple struct into c file	
